[package]
name = "minecraft-mod-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
futures-util = "0.3.31"
hex = "0.4.3"
indicatif = "0.18.3"
percent-encoding = "2.3.2"
reqwest = { version = "0.12.25", features = ["json", "stream"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
url = "2.5.7"
walkdir = "2.5.0"
dirs = "6.0.0"
